Tue Jan  5 05:13:50 UTC 2021
---------------
	- 2.84.0_beta11
	- add show-changelog option and update manpage (Peter Hyman)
	- backwards-incompatibility warning: check-updates will now return
	  1 if there are updates available - this will make it easier to
	  use this feature with cron (Peter Hyman)
	- document issues with filenames having spaces (Eric Pozharski)

Fri Nov 27 21:14:26 UTC 2020
---------------
	- 2.84.0_beta10
	- Fix output if package is incorrectly named (phenixia2003)
    
Mon Aug  3 05:21:07 UTC 2020
---------------
	- 2.84.0_beta9
	- Add Switzerland mirrors (xpetrl)
	- core-functions.sh: Replace tempfile with mktemp (I.G.O.R)

Thu Feb 27 03:52:32 UTC 2020
---------------
	- 2.84.0_beta8
	- Revert "More fixups for alternate ROOT (zerouno)"
	
Wed Feb 19 20:38:23 2020 -0600
---------------
	- 2.84.0_beta7
	- More fixups for alternate ROOT (zerouno)
	- Uncomment mirrors.slackware.com mirror by default (zerouno)

Mon Jul 15 20:30:01 UTC 2019
---------------
	- 2.84.0_beta6
	- Add slackware.uk mirrors to sample mirror list
	- install-new: catch packages added to /patches after -stable release

Mon May 20 06:00:56 UTC 2019
---------------
	- 2.84.0_beta5
	- In doinst.sh, remove /var/lib/slackpkg/CHECKSUMS* when slackpkg
	  itself is upgraded

Mon Jan 28 06:44:29 UTC 2019
---------------
	- 2.84.0_beta4
	- Remove subshell usage and save a trivial amount of time
	- Catch errors and return exit status 1 if they occur
	- Fixup blacklist checking and appending when using alt $ROOT

Mon Dec 31 06:46:15 UTC 2018
---------------
	- 2.84.0_beta3
	- Really fix support for blacklisting entire package sets
	  (David Woodfall)

Sun Dec 30 10:21:10 UTC 2018
---------------
	- 2.84.0_beta2
	- Fix support for blacklisting entire package sets; blacklisted sets 
	  now need a trailing slash, e.g. kde/  (David Woodfall)

Sun Dec  2 06:46:33 UTC 2018
---------------
	- 2.84.0_beta1
	- Allow blacklisting of individual packages without collateral 