@@ -54,27 +54,37 @@
 #file://path/to/some/directory/
 #
 #----------------------------------------------------------------
-# Slackware ARM x.x (for an assumed release of the hard float port)
+# Slackware ARM 15.0: 32bit armv7, hardware floating point ABI.
 #----------------------------------------------------------------
-#ftp://slackware.uk/slackwarearm/slackwarearm-x.x/
-#ftp://ftp.halifax.rwth-aachen.de/slackwarearm/slackwarearm-x.x/
-#ftp://ftp.slackware.pl/pub/slackwarearm/slackwarearm-x.x/
-#ftp://mirrors.vbi.vt.edu/linux/slackwarearm/slackwarearm-x.x/
-#ftp://mirror.slackbuilds.org/pub/slackwarearm/slackwarearm-x.x/
-#ftp://slackware.absolutehosting.net/pub/slackwarearm/slackwarearm-x.x/
+#ftp://slackware.uk/slackwarearm/slackwarearm-15.0/
+#ftp://ftp.halifax.rwth-aachen.de/slackwarearm/slackwarearm-15.0/
+#ftp://ftp.slackware.pl/pub/slackwarearm/slackwarearm-15.0/
+#ftp://mirror.slackbuilds.org/pub/slackwarearm/slackwarearm-15.0/
+#ftp://slackware.absolutehosting.net/pub/slackwarearm/slackwarearm-15.0/
 #
-#ftp://ftp.arm.slackware.com/slackwarearm/slackwarearm-x.x/
+#ftp://ftp.arm.slackware.com/slackwarearm/slackwarearm-15.0/
 #
 
 #----------------------------------------------------------------
-# Slackware ARM current
+# Slackware ARM current: 32bit armv7, hardware floating point ABI.
 #----------------------------------------------------------------
 #ftp://slackware.uk/slackwarearm/slackwarearm-current/
 #ftp://ftp.halifax.rwth-aachen.de/slackwarearm/slackwarearm-current/
 #ftp://ftp.slackware.pl/pub/slackwarearm/slackwarearm-current/
-#ftp://mirrors.vbi.vt.edu/linux/slackwarearm/slackwarearm-current/
 #ftp://mirror.slackbuilds.org/pub/slackwarearm/slackwarearm-current/
 #ftp://slackware.absolutehosting.net/pub/slackwarearm/slackwarearm-current/
 #
 #ftp://ftp.arm.slackware.com/slackwarearm/slackwarearm-current/
+#
 
+#----------------------------------------------------------------
+# Slackware AArch64 (ARM64) current: 64 bit armv8
+#----------------------------------------------------------------
+#ftp://slackware.uk/slackwarearm/slackwareaarch64-current/
+#ftp://ftp.halifax.rwth-aachen.de/slackwarearm/slackwareaarch64-current/
+#ftp://ftp.slackware.pl/pub/slackwarearm/slackwareaarch64-current/
+#ftp://mirror.slackbuilds.org/pub/slackwarearm/slackwareaarch64-current/
+#ftp://slackware.absolutehosting.net/pub/slackwarearm/slackwareaarch64-current/
+#
+#ftp://ftp.arm.slackware.com/slackwarearm/slackwareaarch64-current/
+#
