@@ -38,6 +38,7 @@ value using "uname -m". The valid values are:
 
 .ds title MACHINE\t\tVALID ARCH VALUES
 .ds arm ARM\t\t\tarm
+.ds aarch64 AArch64\t\taarch64
 .ds x86 x86 (32bits)\ti386, i486, i586 and i686
 .ds x86_64 x86 (64bits)\tx86_64
 .ds ppc PowerPC\t\tpowerpc
@@ -46,6 +47,8 @@ value using "uname -m". The valid values are:
 .B \*[title]
 .br
 \*[arm]
+.br
+\*[aarch64]
 .br
 \*[x86]
 .br
