@@ -28,16 +28,17 @@
 # For configuration options that have only two states, possible values are
 # either "on" or "off"
 
-# Remember, the only official Slackware ports are x86, s390, and arm, and
-# slackpkg developers don't have s390 boxes for testing.  If you are
-# testing/using other architectures and have suggestions or patches, 
-# please let us know (email rworkman@slackware.com)
+# Remember, the only official Slackware ports are x86, s390, arm, and aarch64,
+# and slackpkg developers don't have s390 boxes for testing.  If you are 
+# testing/using other architectures and have suggestions or patches, please 
+# let us know (email rworkman@slackware.com)
 #
 # Select the architecture of your system. Valid values are: 
 #	i#86 (where # is 3, 4, 5 or 6)
 #	x86_64
 #	s390
 #	arm* (* can be v4, v5tejl, and other ARM versions) 
+#	aarch64
 #	powerpc
 #
 # The line is commented because slackpkg will try to find your 
