@@ -1,3 +1,7 @@
+
+---------------
+        - Added support for Slackware-AArch64 (Stuart Winter)
+
 Tue Jan  5 05:13:50 UTC 2021
 ---------------
 	- 2.84.0_beta11
